[project]
name = "suitecre_agents"
version = "1.0.0"
description = "LangGraph multi-agent system: Nexa and Lead Gen agents"
authors = [
    { name = "SuiteCRE" }, 
]
requires-python = ">=3.11.0,<3.13"
dependencies = [
    # Core LangGraph
    "langgraph>=0.6.2",
    "langgraph-cli[inmem]>=0.3.6", 
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    
    # LLM Providers
    "langchain-anthropic>=0.3.18",
    "langchain-openai>=0.3.28",
    "langchain-google-genai>=2.0.0",
    
    # Database & Storage
    "supabase>=2.15.1",
    "pydantic==2.11.3",
    
    # Nexa Agent Tools
    "mcp>=1.9.1",
    "aiohttp>=3.8.0",
    
    # Lead Generation Tools
    "firecrawl-py>=0.0.1",
    "tavily-python>=0.3.0",
    "google-search-results>=2.4.2",
    
]

[tool.setuptools]
packages = ["tools_agent", "suitecrm_tools"]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.3.6",
    "ruff>=0.8.4",
]